package com.xuan.moho.design.proxy;

/**
 * @author xuan
 * @since 2023/3/7
 */
public interface Person {

    void sayHello();
}
